--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -1,4 +1,3 @@
-/* Contenedor principal de las cartas */
 .cards-container {
     display: flex;
     justify-content: center;
@@ -19,7 +18,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     opacity: 0;
-    animation: slideIn 5s forwards;
+    animation: slideIn 15s forwards;
 }
 
 /* Imagen dentro de la carta */
@@ -68,5 +67,45 @@
     to {
         opacity: 1;
         transform: translateX(0);
+    }
+}
+
+/* Media Queries */
+
+/* Para pantallas de hasta 768px (tablets y móviles) */
+@media (max-width: 768px) {
+    .card {
+        width: 90%;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .card-image {
+        width: 80%;
+        margin-bottom: 10px;
+    }
+    .card-content {
+        width: 100%;
+    }
+}
+
+/* Para pantallas de hasta 480px (móviles pequeños) */
+@media (max-width: 480px) {
+    .card {
+        width: 100%;
+        min-height: auto;
+        padding: 15px;
+    }
+    .card-image {
+        width: 100%;
+    }
+    .card-content h2 {
+        font-size: 1.2em;
+    }
+    .card-content p {
+        font-size: 0.9em;
+    }
+    .card-phrase {
+        font-size: 0.8em;
     }
 }
