--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,13 +13,12 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 0.1rem ;
+    padding: 0.1rem;
     color: #091f30;
 }
 
 .logo {
     width: 160px;
-    /* Ajusta según el tamaño que necesites */
     height: auto;
 }
 
@@ -29,4 +28,41 @@
 
 .subtitle {
     font-size: 1em;
+}
+
+/* Media Queries */
+
+/* Para pantallas de hasta 768px (tablets y móviles) */
+@media (max-width: 768px) {
+    .title-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .logo {
+        width: 120px;
+    }
+
+    .title {
+        font-size: 2em;
+    }
+
+    .subtitle {
+        font-size: 0.9em;
+    }
+}
+
+/* Para pantallas de hasta 480px (móviles pequeños) */
+@media (max-width: 480px) {
+    .title {
+        font-size: 1.8em;
+    }
+
+    .subtitle {
+        font-size: 0.8em;
+    }
+
+    .logo {
+        width: 100px;
+    }
 }
