--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -103,3 +103,37 @@
     cursor: pointer;
     border-radius: 5px;
 }
+
+/* Media Queries */
+
+/* Para pantallas de hasta 768px (tablets y móviles) */
+@media (max-width: 768px) {
+    .navbar {
+        grid-template-columns: 1fr; /* Cambiar a una sola columna */
+        text-align: center;
+    }
+    .navbar-list {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .search-container {
+        justify-content: center;
+        margin: 0;
+    }
+}
+
+/* Para pantallas de hasta 480px (móviles pequeños) */
+@media (max-width: 480px) {
+    .navbar-list a {
+        font-size: 0.9em;
+        padding: 6px 10px;
+    }
+    .search-input {
+        width: 100px;
+        font-size: 0.8em;
+    }
+    .navbar-search-button {
+        padding: 4px 10px;
+        font-size: 0.8em;
+    }
+}
