--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -18,8 +18,9 @@
 }
 
 .logo {
-    width: 160px;
+    width: 50px;
     height: auto;
+    filter: invert(25%) sepia(60%) saturate(300%) hue-rotate(180deg) brightness(90%) contrast(90%);
 }
 
 .title {
