--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -3,11 +3,11 @@
   max-width: 100%;
   margin: 0;
   padding: 20px;
-  background-image: url('../assets/images/haul-shield-original.jpeg');
+  background-image: url('../assets/images/haul-back.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  color: white;
+  color: #000000; /* Azul oscuro */
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto auto auto auto auto;
@@ -22,14 +22,14 @@
 
 .about-title {
   font-size: 2.5em;
-  color: white;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  color: #ffffff; /* Azul oscuro */
+  text-shadow: 2px 2px 6px rgba(169, 169, 169, 0.8); /* Sombra gris claro */
 }
 
 .about-subtitle {
   font-size: 1.8em;
-  color: white;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  color: #ffffff; /* Azul oscuro */
+  text-shadow: 2px 2px 6px rgba(169, 169, 169, 0.8); /* Sombra gris claro */
   margin-bottom: 20px;
 }
 
@@ -51,6 +51,8 @@
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   align-items: center;
+  color: #ffffff; /* Azul oscuro */
+  text-shadow: 2px 2px 6px rgba(169, 169, 169, 0.8); /* Sombra gris claro */
 }
 
 .intro-image,
@@ -64,6 +66,8 @@
 
 .mission-text {
   grid-column: 2;
+  color: #ffffff; /* Azul oscuro */
+  text-shadow: 2px 2px 6px rgba(169, 169, 169, 0.8); /* Sombra gris claro */
 }
 
 .about-history .history-content {
@@ -75,11 +79,13 @@
 
 .about-history .history-content header,
 .about-history .history-content p {
-  grid-column: 1; /* Ubica el texto en la primera columna */
+  grid-column: 1;
+  color: #ffffff; /* Azul oscuro */
+  text-shadow: 2px 2px 6px rgba(169, 169, 169, 0.8); /* Sombra gris claro */
 }
 
 .about-history .history-content figure {
-  grid-column: 2; /* Ubica la imagen en la segunda columna */
+  grid-column: 2;
 }
 
 .about-carousel {
