--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,17 +1,39 @@
+/* header.css */
+
 .header {
+    display: flex;
+    flex-direction: column;
     background-color: #f1f1f1;
 }
 
-.header-content {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+.header-top {
+    display: flex;
+    justify-content: flex-end; /* Alinea el botón a la derecha */
+    padding: 10px 20px;
+}
+
+.login-button {
+    background-color: #091f30;
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+}
+
+.login-button:hover {
+    background-color: #3c6f8c;
+}
+
+.header-bottom {
+    display: flex;
+    justify-content: space-between; /* Distribuye el espacio entre elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+    padding: 10px 20px;
 }
 
 .title-container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
     padding: 0.1rem;
     color: #091f30;
@@ -21,23 +43,21 @@
     width: 50px;
     height: auto;
     filter: invert(25%) sepia(60%) saturate(300%) hue-rotate(180deg) brightness(90%) contrast(90%);
-}
-
-.title {
-    font-size: 2.3em;
-}
-
-.subtitle {
-    font-size: 1em;
+    margin-right: 20px; /* Agregamos margen para separar el logo del navbar*/
 }
 
 /* Media Queries */
 
 /* Para pantallas de hasta 768px (tablets y móviles) */
 @media (max-width: 768px) {
+    .header-bottom {
+        flex-direction: column; /* Cambiamos a columna en móviles */
+        align-items: flex-start; /* Alineamos a la izquierda */
+    }
+
     .title-container {
-        flex-direction: column;
-        text-align: center;
+        flex-direction: row; /* Volvemos a la fila para logo y navbar */
+        text-align: left;
     }
 
     .logo {
